Revert "nav-bar alignment issue solved"

--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: Monfont-sizetserrat-Medium;
+  font-family: Montserrat-Medium;
   src: url("../../assets/fonts/Montserrat-Medium.ttf")
 }
 
@@ -21,16 +21,17 @@
 .navbar-light .navbar-nav .nav-link {
   color: #FFFFFF;
   font-family: Montserrat-Regular;
-  font-size: 13.5px;
+  font-size: 14px;
+  margin: 5px;
 }
 
 /* vertical bar between menu items*/
-/*
+
 .span-bar {
   border-right: 1px solid white;
   height: 25px;
 }
-*/
+
 /* underline for external menu items*/
 
 .no-bars.active {
@@ -46,14 +47,6 @@
 .nav-item {
   text-align: center;
   vertical-align: middle;
-  display: block;
-  border-right: 1px solid white;
-  padding-top: 0;
-  padding-bottom: 0;
-}
-
-.nav-item:last-child{
-  border-right: none;
 }
 
 .navbar-light .navbar-nav .nav-link:hover {
@@ -68,7 +61,7 @@ img {
 }
 
 .cg_internal, .nav>li>a.cg_internal {
-  text-align: center;
+  display: none;
 }
 
 .dropdown-menu {
@@ -87,7 +80,7 @@ img {
 .dropdown-item {
   color: #ffffff;
   font-family: Montserrat-Regular;
-  font-size: 13.5px;
+  font-size: 14px;
 }
 
 .dropdown-item:hover {
@@ -103,28 +96,24 @@ img {
 
 /* ----------- Mobile S----------- */
 
-
-
-@media only screen and (max-width: 359px) {
+@media only screen and (min-width: 320px) and (max-width: 604px) {
   .collapse.navbar-collapse.show {
+    margin-top: 12px;
   }
   img {
     width: 114px;
     height: 64px;
   }
-
-  .nav-item{
-    border: none;
+  .span-bar {
+    border-right: none;
+    height: 20px;
   }
-
   .dropdown-menu {
     background-color: #4bbdec;
     margin-right: -150px;
     border: transparent;
     margin-left: -50px;
-    border: none;
   }
-
 }
 
 
@@ -133,23 +122,21 @@ img {
 @media only screen and (min-width: 360px) and (max-width: 640px) {
 
   .collapse.navbar-collapse.show {
-
+    margin-top: 12px;
   }
   img {
     width: 114px;
     height: 64px;
   }
-
-  .nav-item{
-    border: none;
+  .span-bar {
+    border-right: none;
+    height: 20px;
   }
-
   .dropdown-menu {
     background-color: #4bbdec;
     margin-right: -170px;
     border: transparent;
     margin-left: -30px;
-    border: none;
   }
 }
 
@@ -157,17 +144,16 @@ img {
 
 @media only screen and (min-width: 375px) and (max-width: 604px) {
   .collapse.navbar-collapse.show {
-
+    margin-top: 12px;
   }
   img {
     width: 114px;
     height: 64px;
   }
-
-  .nav-item{
-    border: none;
+  .span-bar {
+    border-right: none;
+    height: 20px;
   }
-
   .dropdown-menu {
     background-color: #4bbdec;
     margin-right: -200px;
@@ -182,17 +168,16 @@ img {
 
 @media only screen and (min-width: 411px) and (max-width: 731px) {
   .collapse.navbar-collapse.show {
-
+    margin-top: 12px;
   }
   img {
     width: 114px;
     height: 64px;
   }
-
-  .nav-item{
-    border: none;
+  .span-bar {
+    border-right: none;
+    height: 20px;
   }
-
   .dropdown-menu {
     background-color: #4bbdec;
     margin-right: -170px;
@@ -204,39 +189,22 @@ img {
 /* ----------- Tablet (iPad)----------- */
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .navbar{
-    padding-bottom: 45px;
-  }
   .collapse.navbar-collapse.show {
-
+    margin-top: 12px;
   }
   img {
     width: 114px;
     height: 64px;
   }
-
-  .nav-item{
-    border: none;
-  }
-
-  .nav-link{
-    font-size: 14px;
-  }
-
-  /* horizontal dropdown menu*/
-  .dropdown-menu>li {
-    display: inline-block;
+  .span-bar {
+    border-right: none;
+    height: 20px;
   }
   .dropdown-menu {
     background-color: #4bbdec;
-    margin-right: -1000px;
+    margin-right: 10px;
     border: transparent;
-    margin-left: 150px;
-  }
-  .dropdown-item {
-    color: #ffffff;
-    font-family: Montserrat-Regular;
-    font-size: 10px;
+    margin-left: 180px;
   }
 }
 
@@ -245,19 +213,20 @@ img {
 /* ----------- iPad Pro 12.9" ----------- */
 
 @media only screen and (min-width: 1024px) and (max-width: 1366px) {
-  .navbar{
-    padding-bottom: 30px;
-  }
   .collapse.navbar-collapse.show {
-
+    margin-top: 5px;
   }
   .navbar-light .navbar-nav .nav-link {
     color: #FFFFFF;
     font-family: Montserrat-Regular;
-    font-size: 12px;
+    font-size: 10px;
     margin: 1px;
   }
-
+  /* vertical bar between menu items*/
+  .span-bar {
+    border-right: 1px solid white;
+    height: 30px;
+  }
   .dropdown-toggle {
     font-family: Montserrat-Regular;
     color: #ffffff !important;
@@ -270,9 +239,6 @@ img {
   img {
     width: 100px;
     height: 60px;
-  }
-  .nav-item{
-    border: none;
   }
   /* horizontal dropdown menu*/
   .dropdown-menu>li {
